--- a/app/src/main/res/drawable/round_green_bg.xml
+++ b/app/src/main/res/drawable/round_green_bg.xml
@@ -4,7 +4,12 @@
     <item>
         <shape >
             <solid android:color="@color/account_status_green_color" />
-            <corners android:radius="10dp" />
+            <corners
+                android:topRightRadius="0dp"
+                android:topLeftRadius="10dp"
+                android:bottomRightRadius="10dp"
+                android:bottomLeftRadius="0dp"
+                />
             <stroke
                 android:width="1dip"
                 android:color="@color/account_status_green_color" />
@@ -16,3 +21,23 @@
         </shape>
     </item>
 </ripple>
+
+    <!--
+    <?xml version="1.0" encoding="UTF-8"?>
+    <ripple xmlns:android="http://schemas.android.com/apk/res/android"
+        android:color="@color/account_status_green_color">
+        <item>
+            <shape >
+                <solid android:color="@color/account_status_green_color" />
+                <corners android:radius="10dp" />
+                <stroke
+                    android:width="1dip"
+                    android:color="@color/account_status_green_color" />
+                <padding
+                    android:bottom="0dip"
+                    android:left="0dip"
+                    android:right="0dip"
+                    android:top="0dip" />
+            </shape>
+        </item>
+    </ripple>-->
