--- a/app/src/main/res/layout/field_visit_recycler.xml
+++ b/app/src/main/res/layout/field_visit_recycler.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <RelativeLayout
+                android:layout_margin="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageview">
@@ -29,12 +30,7 @@
                     android:id="@+id/image_list"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="5dp"
                     android:layout_centerVertical="true"
-                    android:padding="5dp"
                     android:src="@drawable/usernamebg"
                     app:civ_border_color="@color/grey"
                     app:civ_border_width="1dp" />
@@ -44,22 +40,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/content1"
-                android:layout_toEndOf="@id/imageview"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp">
+                android:layout_toRightOf="@id/imageview"
+                android:layout_margin="10dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="3"
-                    android:paddingTop="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="5dp"  
                     android:id="@+id/rel2">
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
+                        android:layout_weight="1.2"
                         android:layout_height="wrap_content"
                         android:textSize="15sp"
                         android:textColor="@color/grey1"
@@ -72,7 +63,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/border_line"
                         android:textSize="15sp"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="10dp"
                         android:text=":"
                         android:fontFamily="sans-serif" />
                     <TextView
@@ -94,6 +85,7 @@
                         android:tint="@color/grey2"
                         android:src="@drawable/ic_edit"/>
                     <ImageView
+                        android:visibility="gone"
                         android:layout_width="0dp"
                         android:layout_weight="0.2"
                         android:layout_height="wrap_content"
@@ -108,14 +100,10 @@
                     android:orientation="horizontal"
                     android:weightSum="3"
                     android:layout_below="@+id/rel2"
-                    android:paddingTop="0dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="5dp"
                     android:id="@+id/rel1">
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
+                        android:layout_weight="1.2"
                         android:layout_height="match_parent"
                         android:gravity="start"
                         android:textSize="15sp"
@@ -150,14 +138,11 @@
                     android:orientation="horizontal"
                     android:layout_below="@+id/rel1"
                     android:weightSum="3"
-                    android:paddingTop="0dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingBottom="5dp"
+
                     android:id="@+id/rel3">
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
+                        android:layout_weight="1.2"
                         android:layout_height="match_parent"
                         android:gravity="start"
                         android:textSize="15sp"
@@ -203,7 +188,7 @@
                     android:id="@+id/rel4">
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
+                        android:layout_weight="1.2"
                         android:layout_height="match_parent"
                         android:gravity="start"
                         android:textSize="15sp"
